--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Flask==0.11.1
 django-dotenv==1.4.1 # Read environment variables from .env
 django-getenv==1.3.1 # Get environment variables
 newrelic
+flask-sitemap==0.2.0
 
 # Error tracking
 blinker==1.4
