--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
-Flask==0.12.0
+# Core packages
 django-dotenv==1.4.1 # Read environment variables from .env
 django-getenv==1.3.1 # Get environment variables
-newrelic
-flask-sitemap==0.2.0
-Jinja2>=2.8.1 # Templating for Flask; pinned past security update
+Flask==0.12.0        # Web microframework
+Jinja2>=2.8.1        # Templating for Flask; pinned past security update
 
-# Error tracking
-blinker==1.4
-rollbar==0.13.9
+# Features
+flask-sitemap==0.2.0 # Web sitemaps
+
+# Monitoring/tracking/logging
+blinker==1.4         # Dependency of rollbar
+newrelic             # Website monitoring
+rollbar==0.13.9      # rollbar.com error logging
 
 # Testing
-flake8==3.2.1 # Python linting
 codeclimate-test-reporter==0.2.0 # Test coverage
+flake8==3.2.1                    # Python linting
