--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 django-dotenv==1.4.1 # Read environment variables from .env
 django-getenv==1.3.1 # Get environment variables
 Flask==0.12.0        # Web microframework
+Flask-Assets==0.12   # Merge and minify CSS and JS assets
 Jinja2>=2.8.1        # Templating for Flask; pinned past security update
 
 # Features
