--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-getenv==1.3.1 # Get environment variables
 Flask==0.12.0        # Web microframework
 Flask-Assets==0.12   # Merge and minify CSS and JS assets
 Jinja2>=2.8.1        # Templating for Flask; pinned past security update
+cssmin
 
 # Features
 flask-sitemap==0.2.0 # Web sitemaps
