--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,12 @@ django-getenv==1.3.1 # Get environment variables
 Flask==0.12.0        # Web microframework
 Flask-Assets==0.12   # Merge and minify CSS and JS assets
 Jinja2>=2.8.1        # Templating for Flask; pinned past security update
-cssmin
+cssmin==0.2.0        # CSS minification
 
 # Features
 flask-sitemap==0.2.0 # Web sitemaps
 
 # Monitoring/tracking/logging
 blinker==1.4         # Dependency of rollbar
-newrelic             # Website monitoring
+newrelic==2.78.0.57  # Website monitoring
 rollbar==0.13.10     # rollbar.com error logging
