--- a/config/uwsgi/website.ini
+++ b/config/uwsgi/website.ini
@@ -16,3 +16,8 @@ vacuum = true
 post-buffering = 1
 buffer-size = 16384
 thunder-lock = true
+chmod-socket = 664
+uid = www-data
+gid = www-data
+logto = /var/log/uwsgi/uwsgi.log
+die-on-term = true
