--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,7 @@
 ENV=production
 DEBUG=false
-SERVER_NAME='www.example.com'
+SERVER_NAME='www.$HOSTNAME'
 
-ROLLBAR_SERVER_TOKEN=token
-ROLLBAR_CLIENT_TOKEN=token
-SEGMENT_TOKEN=token
+ROLLBAR_SERVER_TOKEN=$ROLLBAR_SERVER_TOKEN
+ROLLBAR_CLIENT_TOKEN=$ROLLBAR_CLIENT_TOKEN
+SEGMENT_TOKEN=$SEGMENT_TOKEN
