--- a/config/uwsgi/website.ini
+++ b/config/uwsgi/website.ini
@@ -1,7 +1,7 @@
 [uwsgi]
 vhost = true
 socket = /tmp/website.sock
-venv = /var/www/.virtualenvs/GIT_REPOSITORY/
+venv = /var/www/.virtualenvs/$PROJECT_NAME/
 chdir = /var/www/website/config/uwsgi/
 module = websiterunner
 callable = app
