--- a/config/uwsgi/website.ini
+++ b/config/uwsgi/website.ini
@@ -1,8 +1,8 @@
 [uwsgi]
 vhost = true
-socket = /tmp/website.sock
+socket = /tmp/$PROJECT_NAME.sock
 venv = /var/www/.virtualenvs/$PROJECT_NAME/
-chdir = /var/www/website/config/uwsgi/
+chdir = /var/www/$PROJECT_NAME/config/uwsgi/
 module = websiterunner
 callable = app
 enable-threads = true
