Make sure all config and log files are named after the project

--- a/config/uwsgi/website.ini
+++ b/config/uwsgi/website.ini
@@ -19,5 +19,5 @@ thunder-lock = true
 chmod-socket = 664
 uid = www-data
 gid = www-data
-logto = /var/log/uwsgi/uwsgi.log
+logto = /var/log/uwsgi/$PROJECT_NAME.log
 die-on-term = true
