--- a/config/newrelic.ini
+++ b/config/newrelic.ini
@@ -27,13 +27,13 @@
 # You must specify the license key associated with your New
 # Relic account. This key binds the Python Agent's data to your
 # account in the New Relic service.
-license_key = NEWRELIC_KEY
+license_key = $NEWRELIC_KEY
 
 # The application name. Set this to be the name of your
 # application as you would like it to show up in New Relic UI.
 # The UI will then auto-map instances of your application into a
 # entry on your home dashboard page.
-app_name = APP_NAME
+app_name = $PROJECT_NAME
 
 # When "true", the agent collects performance data about your
 # application and reports this data to the New Relic UI at
@@ -197,7 +197,7 @@ monitor_mode = false
 monitor_mode = false
 
 [newrelic:staging]
-app_name = APP_NAME (Staging)
+app_name = $PROJECT_NAME (Staging)
 monitor_mode = true
 
 [newrelic:production]
