Fix #19 - Comment uwsgi configs

--- a/config/uwsgi/website.ini
+++ b/config/uwsgi/website.ini
@@ -1,23 +1,45 @@
 [uwsgi]
+# Enable virtualhosting mode
 vhost = true
+# Bind to unix socket
 socket = /tmp/$PROJECT_NAME.sock
+# Python virtualenv location
 venv = /var/www/.virtualenvs/$PROJECT_NAME/
+# App preload directory
 chdir = /var/www/$PROJECT_NAME/config/uwsgi/
+# Load wsgi module
 module = websiterunner
+# Default WSGI callable name
 callable = app
+# Enable threading
 enable-threads = true
+# Monitor python module changes to trigger a reload
 python-autoreload = 1
+# Enable master process
 master = true
+# Load apps in workers instead of master
 lazy = true
+# Spawn number of workers
 processes = 4
+# Kill process timeout
 harakiri = 20
+# Reload workers after number of requests
 max-requests = 5000
+# Remove all generated files on exit
 vacuum = true
+# Enable post buffering
 post-buffering = 1
+# Set buffering size
 buffer-size = 16384
+# Serialize accepting requests
 thunder-lock = true
+# Set socket ownership
 chmod-socket = 664
+# Set process owner
 uid = www-data
+# Set process group
 gid = www-data
+# Log to file
 logto = /var/log/uwsgi/$PROJECT_NAME.log
+# Exit instead of brutal reload on sigterm
 die-on-term = true
