--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,3 +1,3 @@
 # Testing
-coverage>=4.0,<4.4               # Test coverage
+coverage==4.4.1                  # Test coverage
 flake8==3.4.1                    # Python linting
