--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -23,5 +23,5 @@ exclude_paths:
   - config/
   - app/static/css/bootstrap.css
   - app/static/css/normalize.css
-  - app/static/js/bootstrap.js
+  - app/static/js/bootstrap.bundle.js
   - app/static/js/jquery.js
