--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,3 +1,4 @@
 # Testing
 coverage==4.5.1                  # Test coverage
 flake8==3.5.0                    # Python linting
+mypy==0.600                      # Type checking
