Move logfit.js token to env variable

--- a/.env.production
+++ b/.env.production
@@ -5,3 +5,4 @@ SERVER_NAME='www.$HOSTNAME'
 ROLLBAR_SERVER_TOKEN=$ROLLBAR_SERVER_TOKEN
 ROLLBAR_CLIENT_TOKEN=$ROLLBAR_CLIENT_TOKEN
 SEGMENT_TOKEN=$SEGMENT_TOKEN
+LOGFIT_CLIENT_TOKEN=$LOGFIT_CLIENT_TOKEN
