Cleanup logfit dev token

--- a/.env.development
+++ b/.env.development
@@ -5,4 +5,4 @@ SERVER_NAME=localhost:5000
 ROLLBAR_SERVER_TOKEN=token
 ROLLBAR_CLIENT_TOKEN=token
 SEGMENT_TOKEN=token
-LOGFIT_CLIENT_TOKEN=$LOGFIT_CLIENT_TOKEN
+LOGFIT_CLIENT_TOKEN=token
