--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask==1.0.2         # Web microframework
 Flask-Assets==0.12   # Merge and minify CSS and JS assets
 pyscss==1.3.5        # CSS minification
 uWSGI==2.0.17.1      # Application server
+syspath==1.0.1       # Modify paths
 
 # Features
 flask-sitemap==0.3.0 # Web sitemaps
