--- a/.coveragerc
+++ b/.coveragerc
@@ -1,9 +1,10 @@
 [run]
 source=.
-omit=.virtualenv
+omit =
+  .virtualenv
 
 [report]
 exclude_lines =
   pragma: no cover
-  production
   if __name__ == "__main__":
+  production
