Switch uwsgi to log inside of app directory

--- a/config/uwsgi/website.ini
+++ b/config/uwsgi/website.ini
@@ -38,6 +38,6 @@ uid = www-data
 # Set process group
 gid = www-data
 # Log to file
-logto = /var/log/uwsgi/$PROJECT_NAME.log
+logto = /var/www/app/logs/uwsgi/$PROJECT_NAME.log
 # Exit instead of brutal reload on sigterm
 die-on-term = true
