Fix uwsgi config file

--- a/config/uwsgi/website.ini
+++ b/config/uwsgi/website.ini
@@ -2,11 +2,9 @@
 # Enable virtualhosting mode
 vhost = true
 # Bind to unix socket
-socket = /tmp/$PROJECT_NAME.sock
-# Python virtualenv location
-venv = /var/www/.virtualenvs/$PROJECT_NAME/
+http-socket = 8080
 # App preload directory
-chdir = /var/www/$PROJECT_NAME/config/uwsgi/
+chdir = /var/www/app/config/uwsgi/
 # Load wsgi module
 module = websiterunner
 # Default WSGI callable name
@@ -38,6 +36,6 @@ uid = www-data
 # Set process group
 gid = www-data
 # Log to file
-logto = /var/www/app/logs/uwsgi/$PROJECT_NAME.log
+logto = /var/www/app/logs/uwsgi/app.log
 # Exit instead of brutal reload on sigterm
 die-on-term = true
