--- a/config/uwsgi/website.ini
+++ b/config/uwsgi/website.ini
@@ -2,7 +2,7 @@
 # Enable virtualhosting mode
 vhost = true
 # Bind to unix socket
-http-socket = 8080
+http-socket = :8080
 # App preload directory
 chdir = /var/www/app/config/uwsgi/
 # Load wsgi module
