Write supervisord logs to logs directory

--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -6,8 +6,8 @@ pidfile=/var/run/supervisord.pid
 [program:uwsgi]
 command=/usr/local/bin/uwsgi --ini /var/www/app/config/uwsgi/website.ini
 directory=/var/www/app
-stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
+stdout_logfile=/var/www/app/logs/supervisord/stdout.log
+stdout_logfile=/var/www/app/logs/supervisord/stderr.log
 stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
 autostart=true
