Add read permissions to uwsgi logs

--- a/config/uwsgi/website.ini
+++ b/config/uwsgi/website.ini
@@ -31,5 +31,7 @@ buffer-size = 16384
 thunder-lock = true
 # Log to file
 logto = /var/www/app/logs/uwsgi/app.log
+# Set logfile permissions
+logfile-chmod = 644
 # Exit instead of brutal reload on sigterm
 die-on-term = true
