Add varsnap configs

--- a/.env.development
+++ b/.env.development
@@ -6,3 +6,8 @@ ROLLBAR_SERVER_TOKEN=token
 ROLLBAR_CLIENT_TOKEN=token
 SEGMENT_TOKEN=token
 LOGFIT_CLIENT_TOKEN=logfit-test
+
+VARSNAP=true
+ENV=development
+VARSNAP_CONSUMER_TOKEN=consumer-jflf6bv9tgmxm9l7uige
+VARSNAP_PRODUCER_TOKEN=
