--- a/.env.production
+++ b/.env.production
@@ -6,3 +6,8 @@ ROLLBAR_SERVER_TOKEN=$ROLLBAR_SERVER_TOKEN
 ROLLBAR_CLIENT_TOKEN=$ROLLBAR_CLIENT_TOKEN
 SEGMENT_TOKEN=$SEGMENT_TOKEN
 LOGFIT_CLIENT_TOKEN=$LOGFIT_CLIENT_TOKEN
+
+VARSNAP=true
+ENV=production
+VARSNAP_PRODUCER_TOKEN=
+VARSNAP_CONSUMER_TOKEN=producer-ytom0dsrz6kroadgsy00
