Fix varsnap tokens

--- a/.env.development
+++ b/.env.development
@@ -9,4 +9,4 @@ LOGFIT_CLIENT_TOKEN=logfit-test
 
 VARSNAP=true
 VARSNAP_CONSUMER_TOKEN=consumer-jflf6bv9tgmxm9l7uige
-VARSNAP_PRODUCER_TOKEN=
+VARSNAP_PRODUCER_TOKEN=producer-ytom0dsrz6kroadgsy00
