--- a/.env.production
+++ b/.env.production
@@ -8,5 +8,5 @@ SEGMENT_TOKEN=$SEGMENT_TOKEN
 LOGFIT_CLIENT_TOKEN=$LOGFIT_CLIENT_TOKEN
 
 VARSNAP=true
-VARSNAP_PRODUCER_TOKEN=
-VARSNAP_CONSUMER_TOKEN=producer-ytom0dsrz6kroadgsy00
+VARSNAP_CONSUMER_TOKEN=
+VARSNAP_PRODUCER_TOKEN=producer-ytom0dsrz6kroadgsy00
