--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "type": "git",
     "url": "git+https://github.com/albertyw/base-flask.git"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "clean-css-cli": "^4.3.0"
+  }
 }
