--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   },
   "license": "MIT",
   "dependencies": {
-    "clean-css-cli": "^4.3.0"
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
+    "babelify": "^10.0.0",
+    "browserify": "^16.5.0",
+    "clean-css-cli": "^4.3.0",
+    "uglifyify": "^5.0.2"
   }
 }
