--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
     "babelify": "^10.0.0",
+    "bootstrap": "^4.3.1",
     "browserify": "^16.5.0",
     "clean-css-cli": "^4.3.0",
+    "jquery": "^3.4.1",
     "uglifyify": "^5.0.2"
   }
 }
