--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "bootstrap": "^4.3.1",
     "browserify": "^16.5.0",
     "clean-css-cli": "^4.3.0",
+    "dotenv": "^8.2.0",
+    "envify": "^4.1.0",
     "jquery": "^3.4.1",
-    "uglifyify": "^5.0.2"
+    "uglifyify": "^5.0.2",
+    "varsnap": "^1.0.2"
   }
 }
