--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "babelify": "^10.0.0",
     "bootstrap": "^4.3.1",
     "browserify": "^16.5.0",
-    "clean-css-cli": "^4.3.0",
+    "clean-css": "^4.2.1",
     "dotenv": "^8.2.0",
     "envify": "^4.1.0",
     "jquery": "^3.4.1",
