--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "envify": "^4.1.0",
     "jquery": "^3.4.1",
     "logfit": "^0.8.0",
+    "popper.js": "^1.16.0",
     "uglifyify": "^5.0.2",
     "varsnap": "^1.0.2"
   }
