--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "base-flask",
   "scripts": {
-    "minify": "node bin/minify-css.js && node bin/minify-js.js",
+    "minify": "node bin/minify.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
