--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jquery": "^3.4.1",
     "logfit": "^0.8.0",
     "popper.js": "^1.16.0",
+    "rollbar": "^2.14.2",
     "uglifyify": "^5.0.2",
     "varsnap": "^1.0.2"
   }
