Add eslint package

--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "rollbar": "^2.14.3",
     "uglifyify": "^5.0.2",
     "varsnap": "^1.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^6.6.0"
   }
 }
