--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "base-flask",
   "scripts": {
     "minify": "node bin/minify.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "eslint": "eslint .",
+    "test": "npm run eslint"
   },
   "repository": {
     "type": "git",
