--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "varsnap": "^1.0.2"
   },
   "devDependencies": {
-    "eslint": "^6.6.0"
+    "eslint": "^6.6.0",
+    "stylelint": "^11.1.1",
+    "stylelint-config-standard": "^19.0.0"
   }
 }
