--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "eslint": "^6.8.0",
+    "mocha": "^7.1.1",
     "stylelint": "^13.2.1",
     "stylelint-config-standard": "^20.0.0"
   }
