--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "varsnap": "^1.3.0"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "mocha": "^7.1.1",
     "stylelint": "^13.3.0",
