--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -1,18 +1,19 @@
 user www-data;
-worker_processes 4;
+worker_processes auto;
+worker_rlimit_nofile 65535;
 pid /run/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
 
 events {
-	worker_connections 1024;
-	# multi_accept on;
+	worker_connections 65535;
+	multi_accept on;
 }
 
 http {
-
+    charset utf-8;
 	client_body_buffer_size 10K;
     client_header_buffer_size 1k;
-    client_max_body_size 8m;
+    client_max_body_size 16m;
     large_client_header_buffers 4 4k;
 
     client_body_timeout 12;
@@ -29,7 +30,8 @@ http {
 	tcp_nodelay on;
 	# keepalive_timeout 65;
 	types_hash_max_size 2048;
-	# server_tokens off;
+	server_tokens off;
+    log_not_found off;
 
 	# server_names_hash_bucket_size 64;
 	# server_name_in_redirect off;
@@ -41,7 +43,10 @@ http {
 	# SSL Settings
 	##
 
-	ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # Dropping SSLv3, ref: POODLE
+	ssl_session_timeout 1d;
+	ssl_session_cache shared:SSL:10m;
+	ssl_session_tickets off;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # Dropping SSLv3, ref: POODLE
 	ssl_prefer_server_ciphers on;
 
 	##
