--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -46,7 +46,7 @@ http {
     ssl_session_timeout 1d;
     ssl_session_cache shared:SSL:10m;
     ssl_session_tickets off;
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2, TLSv1.3;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
 
     ##
