Automatically rotate uwsgi logs after 10 MB

--- a/config/uwsgi/website.ini
+++ b/config/uwsgi/website.ini
@@ -33,5 +33,7 @@ thunder-lock = true
 logto = /var/www/app/logs/uwsgi/app.log
 # Set logfile permissions
 logfile-chmod = 644
+# Rotate logs after reaching 10 MB
+log-maxsize = 10485760
 # Exit instead of brutal reload on sigterm
 die-on-term = true
