Log actual IP instead of docker ip in uwsgi logs

--- a/config/uwsgi/website.ini
+++ b/config/uwsgi/website.ini
@@ -35,5 +35,7 @@ logto = /var/www/app/logs/uwsgi/app.log
 logfile-chmod = 644
 # Rotate logs after reaching 10 MB
 log-maxsize = 10485760
+# Log x-forwarded-for instead of remote_addr
+log-x-forwarded-for = true
 # Exit instead of brutal reload on sigterm
 die-on-term = true
