Add strict, single-interpreter, and need-app configs for uwsgi

--- a/config/uwsgi/website.ini
+++ b/config/uwsgi/website.ini
@@ -1,4 +1,19 @@
 [uwsgi]
+# Use strict mode on parsing configs
+strict = true
+# Enable master process
+master = true
+# Enable threading
+enable-threads = true
+# Remove all generated files on exit
+vacuum = true
+# Only run a single service per worker process
+single-interpreter = true
+# Exit instead of brutal reload on sigterm
+die-on-term = true
+# Only start if the application module can be loaded
+need-app = true
+
 # Enable virtualhosting mode
 vhost = true
 # Bind to unix socket
@@ -9,10 +24,6 @@ chdir = /var/www/app/config/uwsgi/
 module = websiterunner
 # Default WSGI callable name
 callable = app
-# Enable threading
-enable-threads = true
-# Enable master process
-master = true
 # Load apps in workers instead of master
 lazy = true
 # Spawn number of workers
@@ -21,14 +32,13 @@ processes = 4
 harakiri = 20
 # Reload workers after number of requests
 max-requests = 5000
-# Remove all generated files on exit
-vacuum = true
 # Enable post buffering
 post-buffering = 1
 # Set buffering size
 buffer-size = 16384
 # Serialize accepting requests
 thunder-lock = true
+
 # Log to file
 logto = /var/www/app/logs/uwsgi/app.log
 # Set logfile permissions
@@ -37,5 +47,3 @@ logfile-chmod = 644
 log-maxsize = 10485760
 # Log x-forwarded-for instead of remote_addr
 log-x-forwarded-for = true
-# Exit instead of brutal reload on sigterm
-die-on-term = true
