--- a/config/uwsgi/website.ini
+++ b/config/uwsgi/website.ini
@@ -14,6 +14,15 @@ die-on-term = true
 # Only start if the application module can be loaded
 need-app = true
 
+# Reload workers after number of requests
+max-requests = 5000
+# Restart workers after 1 hour
+max-worker-lifetime = 3600
+# Use a max of 1 GB of memory
+reload-on-rss = 1024
+# Wait 60 seconds before forecfully killing workers
+worker-reload-mercy = 60
+
 # Enable virtualhosting mode
 vhost = true
 # Bind to unix socket
@@ -30,8 +39,6 @@ lazy = true
 processes = 4
 # Kill process timeout
 harakiri = 20
-# Reload workers after number of requests
-max-requests = 5000
 # Enable post buffering
 post-buffering = 1
 # Set buffering size
