Add uwsgi configs for worker scaling

--- a/config/uwsgi/website.ini
+++ b/config/uwsgi/website.ini
@@ -23,6 +23,29 @@ reload-on-rss = 1024
 # Wait 60 seconds before forecfully killing workers
 worker-reload-mercy = 60
 
+# Use the busyness algorithm to scale workers
+cheaper-algo = busyness
+# Maxiumum number of workers
+processes = 64
+# Minimum number of workers
+cheaper = 4
+# Workers created at startup
+cheaper-initial = 4
+# Scaling cycle every 1 second
+cheaper-overload = 1
+# How many workers to spawn at a time
+cheaper-step = 8
+# Wait 30 seconds before removing workers
+cheaper-busyness-multiplier = 30
+# Remove workers below 20 percent
+cheaper-busyness-min = 20
+# Add workers above 70 percent usage
+cheaper-busyness-max = 70
+# Spawn emergency workers when over 16 requests are in queue
+cheaper-busyness-backlog-alert = 16
+# Spawn 2 workers when backlog queue is overfilled
+cheaper-busyness-backlog-step = 2
+
 # Enable virtualhosting mode
 vhost = true
 # Bind to unix socket
@@ -35,8 +58,6 @@ module = websiterunner
 callable = app
 # Load apps in workers instead of master
 lazy = true
-# Spawn number of workers
-processes = 4
 # Kill process timeout
 harakiri = 20
 # Enable post buffering
