--- a/config/uwsgi/website.ini
+++ b/config/uwsgi/website.ini
@@ -49,6 +49,11 @@ cheaper-busyness-backlog-step = 2
 # Kill process timeout
 harakiri = 30
 
+# Add a cleaner process name to workers
+auto-procname = true
+# Prefix worker names with the project name
+procname-prefix-spaced = "$PROJECT_NAME"
+
 # Enable virtualhosting mode
 vhost = true
 # Bind to unix socket
