Remove quotes around procname prefix

--- a/config/uwsgi/website.ini
+++ b/config/uwsgi/website.ini
@@ -52,7 +52,7 @@ harakiri = 30
 # Add a cleaner process name to workers
 auto-procname = true
 # Prefix worker names with the project name
-procname-prefix-spaced = "$PROJECT_NAME"
+procname-prefix-spaced = $PROJECT_NAME
 
 # Enable virtualhosting mode
 vhost = true
