Explicitly set supervisor to run as root

--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -2,6 +2,7 @@
 nodaemon=true
 logfile=/var/www/app/logs/supervisord/supervisord.log
 pidfile=/var/run/supervisord.pid
+user=root
 
 [program:uwsgi]
 command=/usr/local/bin/uwsgi --ini /var/www/app/config/uwsgi/website.ini
