Add attribution for uwsgi config

--- a/config/uwsgi/website.ini
+++ b/config/uwsgi/website.ini
@@ -1,3 +1,5 @@
+# With configs from https://www.techatbloomberg.com/blog/configuring-uwsgi-production-deployment/
+
 [uwsgi]
 # Use strict mode on parsing configs
 strict = true
