--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "scripts": {
     "minify": "node bin/minify.js",
     "eslint": "eslint .",
-    "stylelint": "stylelint app/static/css/*",
-    "test": "npm run eslint && npm run stylelint && mocha app/static/js/test"
+    "stylelint": "stylelint static/css/*",
+    "test": "npm run eslint && npm run stylelint && mocha static/js/test"
   },
   "repository": {
     "type": "git",
