--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@babel/preset-env": "^7.11.0",
     "babelify": "^10.0.0",
     "bootstrap": "^4.5.2",
-    "browserify": "^16.5.2",
+    "browserify": "=16.5.1",
     "clean-css": "^4.2.3",
     "dotenv": "^8.2.0",
     "envify": "^4.1.0",
