--- a/.drone.yml
+++ b/.drone.yml
@@ -27,3 +27,8 @@ steps:
     commands:
       - npm install
       - npm test
+
+  - name: Test Dockerfile
+    image: hadolint/hadolint:latest-alpine
+    commands:
+      - hadolint Dockerfile --ignore=DL3008 --ignore=SC2046 --ignore=SC2006
