--- a/.drone.yml
+++ b/.drone.yml
@@ -29,7 +29,7 @@ steps:
       - npm test
 
   - name: Test Bash
-    image: koalaman/shellcheck:stable
+    image: koalaman/shellcheck-alpine:stable
     commands:
       - shellcheck -x bin/*.sh
 
