Make sure all tests pass before building docker container

--- a/.drone.yml
+++ b/.drone.yml
@@ -42,6 +42,9 @@ steps:
 
   - name: Build Docker Container
     depends_on:
+      - Test Python
+      - Test Node
+      - Test Bash
       - Test Dockerfile
     image: plugins/docker:19
     settings:
