--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "chai": "^4.3.0",
     "eslint": "^7.20.0",
     "mocha": "^8.3.0",
+    "nyc": "^15.1.0",
     "stylelint": "^13.10.0",
     "stylelint-config-standard": "^21.0.0"
   }
