--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "varsnap": "^1.6.4"
   },
   "devDependencies": {
+    "babel-plugin-istanbul": "^6.0.0",
     "chai": "^4.3.0",
     "eslint": "^7.20.0",
     "mocha": "^8.3.0",
