--- a/.drone.yml
+++ b/.drone.yml
@@ -25,6 +25,7 @@ steps:
   - name: Test Node
     image: node:14
     commands:
+      - apt-get update && apt-get install -y fonts-liberation libappindicator3-1 libasound2 libatk-bridge2.0-0 libcups2 libgbm1 libgtk-3-0 libnspr4 libnss3 libx11-xcb1 libxss1 libxtst6 lsb-release xdg-utils
       - ln -fs .env.development .env
       - npm install
       - npm test
