--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@babel/preset-env": "^7.12.16",
     "babelify": "^10.0.0",
     "bootstrap": "^4.6.0",
-    "browserify": "=16.5.1",
+    "browserify": "^17.0.0",
     "clean-css": "^5.0.1",
     "dotenv": "^8.2.0",
     "envify": "^4.1.0",
