--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "eslint": "eslint .",
     "stylelint": "stylelint static/css/*",
     "test": "npm run eslint && npm run stylelint && npm run cover",
-    "cover": "nyc --require dotenv/config --instrumenter false mochify --transform envify --require source-map-support/register  --transform [ babelify --ignore [ test ] --plugins [ babel-plugin-istanbul ] ] static/js/test --allow-chrome-as-root"
+    "cover": "nyc --require dotenv/config --instrumenter false mochify --transform loose-envify --require source-map-support/register  --transform [ babelify --ignore [ test ] --plugins [ babel-plugin-istanbul ] ] static/js/test --allow-chrome-as-root"
   },
   "repository": {
     "type": "git",
@@ -21,9 +21,9 @@
     "browserify": "^17.0.0",
     "clean-css": "^5.0.1",
     "dotenv": "^8.2.0",
-    "envify": "^4.1.0",
     "jquery": "^3.5.1",
     "logfit": "^0.8.2",
+    "loose-envify": "^1.4.0",
     "normalize.css": "^8.0.1",
     "popper.js": "^1.16.1",
     "rollbar": "^2.21.0",
