--- a/.drone.yml
+++ b/.drone.yml
@@ -82,7 +82,7 @@ steps:
       - ln -fs .env.development .env
       - pip install -r requirements.txt
       - pip install -r requirements-test.txt
-      - python bin/refresh_varsnap.py
+      - python baseflask/refresh_varsnap.py
   - name: Refresh Varsnap Javascript Production Snaps
     image: node:14
     commands:
