--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "stylelint": "stylelint static/css/*",
     "test": "npm run eslint && npm run stylelint && npm run cover",
     "cover": "nyc --require dotenv/config --instrumenter false mochify --transform loose-envify --require source-map-support/register  --transform [ babelify --ignore [ test ] --plugins [ babel-plugin-istanbul ] ] static/js/test --allow-chrome-as-root",
-    "refresh-varsnap": "ENV=production node -r dotenv/config static/js/test/refresh-varsnap.js"
+    "refresh-varsnap": "node -r dotenv/config static/js/test/refresh-varsnap.js"
   },
   "repository": {
     "type": "git",
