--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "eslint": "eslint .",
     "stylelint": "stylelint static/css/*",
     "test": "npm run eslint && npm run stylelint && npm run cover",
-    "cover": "nyc --require dotenv/config --instrumenter false mochify --transform loose-envify --require source-map-support/register  --transform [ babelify --ignore [ test ] --plugins [ babel-plugin-istanbul ] ] static/js/test --allow-chrome-as-root",
-    "refresh-varsnap": "node static/js/test/refresh-varsnap.js"
+    "cover": "nyc --require dotenv/config --instrumenter false mochify --transform loose-envify --require source-map-support/register  --transform [ babelify --ignore [ test ] --plugins [ babel-plugin-istanbul ] ] static/js/test --allow-chrome-as-root"
   },
   "repository": {
     "type": "git",
