Add matomo analytics

--- a/.env.development
+++ b/.env.development
@@ -6,6 +6,7 @@ ROLLBAR_SERVER_TOKEN=token
 ROLLBAR_CLIENT_TOKEN=token
 SEGMENT_TOKEN=token
 LOGFIT_CLIENT_TOKEN=logfit-test
+MATOMO_SITE_ID=
 
 VARSNAP=true
 VARSNAP_CONSUMER_TOKEN=consumer-vst2b2q9tz5nmmiwpopx
