--- a/.env.production
+++ b/.env.production
@@ -6,6 +6,7 @@ ROLLBAR_SERVER_TOKEN=$ROLLBAR_SERVER_TOKEN
 ROLLBAR_CLIENT_TOKEN=$ROLLBAR_CLIENT_TOKEN
 SEGMENT_TOKEN=$SEGMENT_TOKEN
 LOGFIT_CLIENT_TOKEN=$LOGFIT_CLIENT_TOKEN
+MATOMO_SITE_ID=$MATOMO_SITE_ID
 
 VARSNAP=true
 VARSNAP_CONSUMER_TOKEN=consumer-vst2b2q9tz5nmmiwpopx
