--- a/.drone.yml
+++ b/.drone.yml
@@ -41,12 +41,18 @@ steps:
     commands:
       - hadolint Dockerfile --ignore=DL3008 --ignore=SC2046 --ignore=SC2006
 
+  - name: Test Nginx
+    image: yandex/gixy:0.1.20
+    commands:
+      - gixy config/nginx/*
+
   - name: Build Docker Container
     depends_on:
       - Test Python
       - Test Node
       - Test Bash
       - Test Dockerfile
+      - Test Nginx
     image: plugins/docker:19
     settings:
       repo: base-flask
