--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "minify": "node bin/minify.js",
     "eslint": "eslint .",
     "stylelint": "stylelint static/css/*",
-    "test": "npm run eslint && npm run stylelint && npm run cover",
+    "test": "npm run minify && npm run eslint && npm run stylelint && npm run cover",
     "cover": "nyc --require dotenv/config --instrumenter false mochify --transform loose-envify --require source-map-support/register  --transform [ babelify --ignore [ test ] --plugins [ babel-plugin-istanbul ] ] static/js/test --allow-chrome-as-root"
   },
   "repository": {
