--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "browserify": "^17.0.0",
     "clean-css": "^5.0.1",
     "dotenv": "^10.0.0",
+    "exorcist": "^2.0.0",
     "logfit": "^0.8.2",
     "loose-envify": "^1.4.0",
     "normalize.css": "^8.0.1",
