--- a/.drone.yml
+++ b/.drone.yml
@@ -12,7 +12,7 @@ steps:
       - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > "${HOME}/bin/cc-test-reporter"
       - chmod +x "${HOME}/bin/cc-test-reporter"
       - flake8
-      - mypy app --ignore-missing-imports --strict
+      - mypy . --ignore-missing-imports --strict
       - cc-test-reporter before-build
       - coverage run -m unittest discover
       - exitcode="$?"
