--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ uWSGI==2.0.20          # Application server
 syspath==2.0.5         # Modify paths
 
 # Features
-flask-sitemap==0.3.0   # Web sitemaps
+git+git://github.com/albertyw/flask-sitemap@python-3-10#flask-sitemap
+# Web sitemaps
 
 # Monitoring/tracking/logging
 blinker==1.4           # Dependency of rollbar
