--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "eslint": "eslint .",
     "stylelint": "stylelint static/css/*",
     "test": "npm run minify && npm run eslint && npm run stylelint && npm run cover",
-    "cover": "BRANCH=\"$(git rev-parse --abbrev-ref HEAD)\" nyc --require dotenv/config --instrumenter false mochify --transform loose-envify --require source-map-support/register  --transform [ babelify --ignore [ test ] --plugins [ babel-plugin-istanbul ] ] static/js/test --allow-chrome-as-root"
+    "cover": "nyc --require dotenv/config --require varsnap/gitbranchenv --instrumenter false mochify --transform loose-envify --require source-map-support/register  --transform [ babelify --ignore [ test ] --plugins [ babel-plugin-istanbul ] ] static/js/test --allow-chrome-as-root"
   },
   "repository": {
     "type": "git",
@@ -28,7 +28,7 @@
     "popper.js": "^1.16.1",
     "rollbar": "^2.21.0",
     "uglifyify": "^5.0.2",
-    "varsnap": "^1.7.0"
+    "varsnap": "^1.8.0"
   },
   "devDependencies": {
     "babel-plugin-istanbul": "^6.0.0",
