--- a/config/uwsgi/website.ini
+++ b/config/uwsgi/website.ini
@@ -59,7 +59,7 @@ procname-prefix-spaced = $PROJECT_NAME
 # Enable virtualhosting mode
 vhost = true
 # Bind to unix socket
-http-socket = :$INTERNAL_PORT
+http-socket = :5000
 # App preload directory
 chdir = /var/www/app/config/uwsgi/
 # Load wsgi module
