Add google analytics environment variables

--- a/.env.development
+++ b/.env.development
@@ -4,6 +4,7 @@ SERVER_NAME=
 
 ROLLBAR_SERVER_TOKEN=token
 ROLLBAR_CLIENT_TOKEN=token
+GOOGLE_ANALYTICS_TOKEN=token
 SEGMENT_TOKEN=token
 LOGFIT_CLIENT_TOKEN=logfit-test
 
