--- a/.env.production
+++ b/.env.production
@@ -4,6 +4,7 @@ SERVER_NAME='www.$HOSTNAME'
 
 ROLLBAR_SERVER_TOKEN=$ROLLBAR_SERVER_TOKEN
 ROLLBAR_CLIENT_TOKEN=$ROLLBAR_CLIENT_TOKEN
+GOOGLE_ANALYTICS_TOKEN=$GOOGLE_ANALYTICS_TOKEN
 SEGMENT_TOKEN=$SEGMENT_TOKEN
 LOGFIT_CLIENT_TOKEN=$LOGFIT_CLIENT_TOKEN
 
