--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Core packages
 python-dotenv==0.21.0  # Read environment variables from .env
 Flask==2.2.2           # Web microframework
+gunicorn==20.1.0       # WSGI server
 uWSGI==2.0.21          # Application server
 syspath==3.0.1         # Modify paths
 
