Move gunicorn config to a file

--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -5,7 +5,7 @@ pidfile=/var/run/supervisord.pid
 user=root
 
 [program:gunicorn]
-command=gunicorn -w 4 -b 0.0.0.0:8000 'app.serve:app'
+command=gunicorn -c /var/www/app/config/gunicorn.conf.py
 directory=/var/www/app
 stdout_logfile=/var/www/app/logs/supervisord/gunicorn-stdout.log
 stderr_logfile=/var/www/app/logs/supervisord/gunicorn-stderr.log
