--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,5 @@ flask-sitemap==0.4.0   # Web sitemaps
 # Monitoring/tracking/logging
 blinker==1.5           # Dependency of rollbar
 rollbar==0.16.3        # rollbar.com error logging
+setproctitle==1.3.2    # Allow gunicorn to set process title
 varsnap==1.5.5         # Test discovery
