--- a/.drone.yml
+++ b/.drone.yml
@@ -4,8 +4,9 @@ name: test
 
 steps:
   - name: Test Python
-    image: python:3.11
+    image: python:3.11-slim-bullseye
     commands:
+      - apt-get update && apt-get install -y curl git
       - ln -fs .env.development .env
       - pip install -r requirements.txt
       - pip install -r requirements-test.txt
@@ -87,7 +88,7 @@ type: docker
 name: refresh-varsnap-production-snaps
 steps:
   - name: Refresh Varsnap Python Production Snaps
-    image: python:3.11
+    image: python:3.11-bullseye-slim
     commands:
       - ln -fs .env.development .env
       - pip install -r requirements.txt
