--- a/.drone.yml
+++ b/.drone.yml
@@ -43,8 +43,9 @@ steps:
       - hadolint Dockerfile --ignore=DL3008 --ignore=SC2046 --ignore=SC2006
 
   - name: Test Nginx
-    image: yandex/gixy:0.1.20
+    image: python:3.11-alpine
     commands:
+      - pip install gixy==0.1.20 pyparsing==2.4.7
       - gixy config/nginx/*
 
   - name: Build Docker Container
