Switch from appleboy/drone-ssh to albertyw/ssh-client to deploy

--- a/.drone.yml
+++ b/.drone.yml
@@ -68,13 +68,10 @@ steps:
   #- name: Deploy
   #  depends_on:
   #    - Build Docker Container
-  #  image: appleboy/drone-ssh:1.6.4
-  #  settings:
-  #    host: $HOSTNAME
-  #    username: USERNAME
-  #    key_path: KEY_PATH
-  #    script:
-  #      - "$REPO_PATH/bin/deploy.sh master"
+  #  image: albertyw/ssh-client:4.0.0
+  #  commands:
+  #    - ssh-keyscan $HOSTNAME >> /root/.ssh/known_hosts
+  #    - ssh USERNAME@$HOSTNAME -i KEY_PATH $REPO_PATH/bin/deploy.sh master
   #  volumes:
   #    - name: ssh_key
   #      path: KEY_PATH
