--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "description": "base-flask",
   "scripts": {
-    "minify": "node bin/minify.js",
     "eslint": "eslint .",
     "stylelint": "stylelint static/css/*",
-    "test": "npm run minify && npm run eslint && npm run stylelint && npm run cover",
+    "test": "npm run build:dev && npm run eslint && npm run stylelint && npm run cover",
     "cover": "nyc --require dotenv/config --instrumenter false mochify --transform loose-envify --require source-map-support/register  --transform [ babelify --ignore [ test ] --plugins [ babel-plugin-istanbul ] ] static/js/test --allow-chrome-as-root",
     "build": "webpack --mode=production --node-env=production",
     "build:dev": "webpack --mode=development",
@@ -22,11 +21,8 @@
   "dependencies": {
     "@babel/core": "^7.12.16",
     "@babel/preset-env": "^7.14.1",
-    "@browserify/uglifyify": "^6.0.0",
     "babelify": "^10.0.0",
     "bootstrap": "^5.0.0",
-    "browserify": "^17.0.0",
-    "clean-css": "^5.0.1",
     "css-loader": "^6.7.3",
     "dotenv": "^16.0.0",
     "dotenv-webpack": "^8.0.1",
