--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "eslint": "eslint .",
     "stylelint": "stylelint static/css/*",
     "test": "npm run build:dev && npm run eslint && npm run stylelint && npm run cover",
-    "cover": "nyc --require dotenv/config --instrumenter false mochify --transform loose-envify --require source-map-support/register  --transform [ babelify --ignore [ test ] --plugins [ babel-plugin-istanbul ] ] static/js/test --allow-chrome-as-root",
+    "cover": "nyc --require dotenv/config --instrumenter false mochify --global-transform browserify-css --transform loose-envify --require source-map-support/register --transform [ babelify --ignore [ test ] --plugins [ babel-plugin-istanbul ] ] static/js/test --allow-chrome-as-root",
     "build": "webpack --mode=production --node-env=production",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@webpack-cli/generators": "^3.0.2",
     "babel-plugin-istanbul": "^6.0.0",
+    "browserify-css": "^0.15.0",
     "chai": "^4.3.0",
     "eslint": "^8.0.1",
     "mocha": "^10.0.0",
