--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.11.7",
     "babelify": "^10.0.0",
     "bootstrap": "^5.0.0",
     "css-loader": "^6.7.3",
@@ -26,7 +27,6 @@
     "loose-envify": "^1.4.0",
     "mini-css-extract-plugin": "^2.7.5",
     "normalize.css": "^8.0.1",
-    "popper.js": "^1.16.1",
     "rollbar": "^2.21.0",
     "varsnap": "^1.8.0",
     "webpack": "^5.80.0",
