--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,17 @@ ignore = ["E501"]
 [tool.mypy]
 strict = true
 ignore_missing_imports = true
+
+[tool.coverage.run]
+source = [
+    ".",
+]
+omit = [
+    ".virtualenv",
+]
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    'if __name__ == "__main__":',
+]
