Move requirements.txt into pyproject.toml

--- a/.drone.yml
+++ b/.drone.yml
@@ -8,7 +8,7 @@ steps:
     commands:
       - apt-get update && apt-get install -y curl git
       - ln -fs .env.development .env
-      - pip install -r requirements.txt
+      - pip install -e .
       - pip install -r requirements-test.txt
       - curl -L "https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-$(dpkg --print-architecture)" > "${HOME}/bin/cc-test-reporter"
       - chmod +x "${HOME}/bin/cc-test-reporter"
@@ -95,7 +95,7 @@ steps:
     image: python:3.12-slim-bookworm
     commands:
       - ln -fs .env.development .env
-      - pip install -r requirements.txt
+      - pip install -e .
       - pip install -r requirements-test.txt
       - python baseflask/refresh_varsnap.py
   - name: Refresh Varsnap Javascript Production Snaps
