--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,26 @@ exclude_lines = [
     "pragma: no cover",
     'if __name__ == "__main__":',
 ]
+
+[project]
+name = "base-flask"
+version = "1.0.0"
+dependencies = [
+    # Core packages
+    "python-dotenv==1.0.0",   # Read environment variables from .env
+    "Flask==3.0.0",           # Web microframework
+    "gunicorn==21.2.0",       # WSGI server
+    "syspath==3.0.5",         # Modify paths
+
+    # Features
+    "flask-sitemap==0.4.0",   # Web sitemaps
+
+    # Monitoring/tracking/logging
+    "blinker==1.7.0",         # Dependency of rollbar
+    "rollbar==1.0.0",         # rollbar.com error logging
+    "setproctitle==1.3.3",    # Allow gunicorn to set process title
+    "varsnap==1.5.7",         # Test discovery
+]
+
+[tool.setuptools]
+py-modules = []
