--- a/.drone.yml
+++ b/.drone.yml
@@ -8,8 +8,7 @@ steps:
     commands:
       - apt-get update && apt-get install -y curl git
       - ln -fs .env.development .env
-      - pip install -e .
-      - pip install -r requirements-test.txt
+      - pip install -e .[test]
       - curl -L "https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-$(dpkg --print-architecture)" > "${HOME}/bin/cc-test-reporter"
       - chmod +x "${HOME}/bin/cc-test-reporter"
       - ruff check .
@@ -95,8 +94,7 @@ steps:
     image: python:3.12-slim-bookworm
     commands:
       - ln -fs .env.development .env
-      - pip install -e .
-      - pip install -r requirements-test.txt
+      - pip install -e .[test]
       - python baseflask/refresh_varsnap.py
   - name: Refresh Varsnap Javascript Production Snaps
     image: satantime/puppeteer-node:21-bookworm-slim
