--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "webpack --mode=production --node-env=production",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "wdio": "wdio run ./wdio.conf.js"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,10 @@
     "webpack-cli": "^5.0.2"
   },
   "devDependencies": {
+    "@wdio/browser-runner": "^8.35.1",
+    "@wdio/cli": "^8.35.1",
+    "@wdio/mocha-framework": "^8.35.0",
+    "@wdio/spec-reporter": "^8.32.4",
     "babel-plugin-istanbul": "^6.0.0",
     "browserify-css": "^0.15.0",
     "chai": "^4.3.0",
