Switch to ESM module

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "base-flask",
+  "type": "module",
   "scripts": {
     "eslint": "eslint .",
     "stylelint": "stylelint static/css/*",
