--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "eslint": "eslint .",
     "stylelint": "stylelint static/css/*",
-    "test": "npm run build:dev && npm run eslint && npm run stylelint && npm run cover",
+    "test": "npm run build:dev && npm run eslint && npm run stylelint && npm run wdio",
     "cover": "nyc --require dotenv/config --instrumenter false mochify --global-transform browserify-css --transform loose-envify --require source-map-support/register --transform [ babelify --ignore [ test ] --plugins [ babel-plugin-istanbul ] ] static/js/test --allow-chrome-as-root",
     "build": "webpack --mode=production --node-env=production",
     "build:dev": "webpack --mode=development",
