--- a/.drone.yml
+++ b/.drone.yml
@@ -44,7 +44,7 @@ steps:
   - name: Test Nginx
     image: python:3.13-alpine
     commands:
-      - pip install gixy==0.1.20 pyparsing==2.4.7
+      - pip install gixy==0.1.21
       - gixy config/nginx/*
 
   - name: Build Docker Container
