--- a/.drone.yml
+++ b/.drone.yml
@@ -26,6 +26,7 @@ steps:
   - name: Test Node
     image: satantime/puppeteer-node:23-bookworm-slim
     commands:
+      - apt-get update && apt-get install -y xz-utils  # Remove when https://github.com/satanTime/puppeteer-node/issues/26 is resolved
       - ln -fs .env.development .env
       - npm ci
       - npm test
