--- a/.drone.yml
+++ b/.drone.yml
@@ -91,6 +91,7 @@ steps:
   - name: Refresh Varsnap Javascript Production Snaps
     image: satantime/puppeteer-node:23-bookworm-slim
     commands:
+      - apt-get update && apt-get install -y xz-utils  # Remove when https://github.com/satanTime/puppeteer-node/issues/26 is resolved
       - ln -fs .env.development .env
       - npm ci
       - node baseflask/refresh-varsnap.js
