--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mini-css-extract-plugin": "^2.7.5",
     "normalize.css": "^8.0.1",
     "rollbar": "^2.21.0",
+    "tsx": "^4.19.3",
     "varsnap": "^1.8.0",
     "webpack": "^5.80.0",
     "webpack-cli": "^6.0.0"
