--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mini-css-extract-plugin": "^2.7.5",
     "normalize.css": "^8.0.1",
     "rollbar": "^2.21.0",
+    "ts-loader": "^9.5.2",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3",
     "varsnap": "^1.8.0",
