--- a/.drone.yml
+++ b/.drone.yml
@@ -99,7 +99,7 @@ steps:
     commands:
       - ln -fs .env.development .env
       - npm ci
-      - node baseflask/refresh-varsnap.js
+      - tsx baseflask/refresh-varsnap.ts
 trigger:
   cron:
     - refresh-varsnap-production-snaps
