--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "webpack-cli": "^6.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.27.0",
     "@wdio/browser-runner": "^9.0.0",
     "@wdio/cli": "^9.0.0",
     "@wdio/mocha-framework": "^9.0.0",
@@ -48,7 +49,8 @@
     "eslint": "^9.0.0",
     "globals": "^16.0.0",
     "stylelint": "^16.0.2",
-    "stylelint-config-standard": "^38.0.0"
+    "stylelint-config-standard": "^38.0.0",
+    "typescript-eslint": "^8.32.1"
   },
   "stylelint": {
     "extends": "stylelint-config-standard"
